tests/errors/default_undefined_name.py
# expect_error: NameError
def bad(a=missing_name):
    return a